# thingino-cloner

./: .gitignore  CAPTURE_VENDOR_T20.md  CMakeLists.txt  Frame 609: 9920 bytes on wire (79360 bit.yaml  Makefile  T20_BOOTSTRAP_ANALYSIS.md  T20_SUPPORT_STATUS.md  capture_vendor_t20.sh  extract_ddr_from_pcap.py  log.txt  our_ddr.hex  test_t20_ddr_gen  test_t20_ddr_gen.c  test_t20_fixed_log.txt  test_t20_no_reopen_log.txt  test_t20_vendor_ddr_log.txt  test_vendor_ddr_log.txt  vendor_ddr.hex  vendor_t20_full_bootstrap.pcap
docs/: EMBEDDED_FIRMWARE.md  cpu_magic_debugging.md
include/: flash_descriptor.h  thingino.h
references/: t41n.pcap  t41n_ddr_analysis.md
references/cloner-2.5.43-ubuntu_thingino/configs/: platforms.cfg
references/cloner-2.5.43-ubuntu_thingino/configs/A1NE-read/: a1ne_sfc_nor_reader_16MB.cfg  a1ne_sfc_nor_reader_8MB.cfg
references/cloner-2.5.43-ubuntu_thingino/configs/t20/: t20_sfc_nor_reader_16MB.cfg
src/: bootstrap.c  main.c  test_config_database.c  test_ddr_compare.c  test_ddr_multiplechip.c  test_ddrc_analysis.c  test_device_firmware_read.c  test_firmware_database.c  test_generate_t31x.c  utils.c
src/ddr/: a1_reference_ddr.h  ddr_binary_builder.c  ddr_config_database.c  ddr_param_builder.h  parser.c  t20_reference_ddr.h  t20_reference_ddr.h.324byte.bak
src/firmware/: firmware_a1_n_ne_x.c  firmware_a1_nt_a.c  firmware_database.c  firmware_database.h  firmware_registry.h  firmware_t20.c  firmware_t21.c  firmware_t23.c  firmware_t30.c  firmware_t30a.c  firmware_t30nl.c  firmware_t30x.c  firmware_t31.c  firmware_t31a.c  firmware_t31nl.c  firmware_t31x.c  firmware_t40.c  firmware_t41.c  flash_descriptor.c  handshake.c  loader.c  reader.c  reader_new.c  t20_erase_sequence.h  writer.c  writer.h
src/usb/: device.c  device_fixed.c  manager.c  protocol.c
tools/: capture_usb_traffic.sh  generate_firmware_database.py  write_sequence.c
vendor_t20_analysis/: vendor_t20_capture_20251109_151140.pcap
